# Printing-simulator

./: CMakeLists.txt  DesignByContract.h  README.md  System.cpp  System.h  SystemImporter.cpp  SystemImporter.h  SystemMain.cpp  Utils.cpp  Utils.h  Xml_Importer.cpp  Xml_Importer.h  jobinfos.txt  main.cpp  output.txt  status.txt  test.xml
Objects/: BWPrinter.cpp  BWPrinter.h  ColorPrinter.cpp  ColorPrinter.h  Scanner.cpp  Scanner.h  System.cpp  System.h  devices.cpp  devices.h  jobs.cpp  jobs.h  log.cpp  log.h  scheduler.cpp  scheduler.h
TestInput/: InConsistentERR4.txt  InConsistentERR6.xml  InconsistentERR1.xml  InconsistentERR2.xml  InconsistentERR3.xml  InconsistentERR4.xml  InconsistentERR5.xml  InputIllegalSystem1.xml  InputIllegalSystem2.xml  InputIllegalSystem3.xml  InputIllegalSystem4.xml  InputIllegalSystem5.xml  InputIllegalSystem6.xml  InputIllegalSystem7.xml  InputIllegalSystem8.xml  InputIllegalSystem9.xml  InputIllegalSystemERR1.txt  InputLegalSystem1.xml  InputLegalSystem2.xml  InputLegalSystem3.xml  InputXMLSyntaxError1.txt  InputXMLSyntaxError1.xml  InputXMLSyntaxError2.xml  InputXMLSyntaxError3.xml  InputXMLSyntaxError4.xml  InputXMLSyntaxError5.txt  InputXMLSyntaxError6.txt  InputXMLSyntaxError7.txt  happyday.xml
TestOutput/: happyDayExpectedOut.txt  happyday.xml
Tests/: SystemDomainTest.cpp  SystemInputTest.cpp  SystemOutputTest.cpp  SystemTests.cpp
gtest/include/gtest/: gtest-message.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h
gtest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-port.h
tinyxml/: tinystr.h  tinyxml.h  tinyxmlparser.cpp
